# tutorials

./: .gitignore  LICENSE  secret.txt
complex_data/: pyproject.toml
complex_data/app/: complex_app.py
complex_data/tests/: test_complex_app.py
complex_data/tests/test_complex_app/: test_config_data_with_pytest_regressions.yml  test_dict_to_html.html  test_svd_calculation.csv
testing_http/: pyproject.toml
testing_http/tests/: test_retrieve_weather_using_vcr  test_weather_app.py  test_weather_app_using_mocks
testing_http/tests/resources/: weather.json
testing_http/weather_app/: __init__.py
testing_http/weather_app/templates/: index.html
